--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/text_username"
+        android:id="@+id/login_email"
         android:layout_width="55dp"
         android:layout_height="20dp"
         android:layout_marginStart="53dp"
@@ -53,12 +53,12 @@
         android:textStyle="bold"
         android:textSize="12sp"
         android:text="@string/nama_pengguna"
-        app:layout_constraintBottom_toTopOf="@+id/login_username"
+        app:layout_constraintBottom_toTopOf="@+id/login_emails"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/text_password"
-        android:layout_width="55dp"
+        android:layout_width="70dp"
         android:layout_height="20dp"
         android:layout_marginStart="53dp"
         android:layout_marginBottom="5dp"
@@ -81,13 +81,14 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.example.myapplication.ui.customview.CustomEditText
-        android:id="@+id/login_username"
+        android:id="@+id/login_emails"
         android:layout_width="295dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="70dp"
-        android:paddingStart="10dp"
+        android:paddingHorizontal="10dp"
         android:drawablePadding="5dp"
+        android:inputType="textEmailAddress"
         android:hint="Nama anda"
         android:background="@drawable/rounded_edittext_background"
         android:drawableStart="@drawable/baseline_mail_outline_24"
@@ -101,12 +102,13 @@
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="70dp"
-        android:paddingStart="8dp"
+        android:paddingHorizontal="8dp"
         android:drawablePadding="5dp"
         android:hint="Kata kunci"
+        android:inputType="textPassword"
         android:background="@drawable/rounded_edittext_background"
         android:drawableStart="@drawable/baseline_lock_outline_24"
-        app:layout_constraintTop_toBottomOf="@+id/login_username"
+        app:layout_constraintTop_toBottomOf="@+id/login_emails"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
