--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,12 +54,11 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:src="android:sample/avatars"
             tools:src="@tools:sample/avatars"/>
 
     </androidx.cardview.widget.CardView>
 
-
-    
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
         android:layout_height="190dp"
@@ -168,11 +167,23 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lihat_jumlah_tabungan"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:layout_marginTop="70dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/rekomendasi_dana_darurat"
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:backgroundTint="@color/purple"
