--- a/app/src/main/res/layout/activity_prediksi_pengeluaran.xml
+++ b/app/src/main/res/layout/activity_prediksi_pengeluaran.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDC500">
+    android:background="#FDC500"
+    tools:context=".ui.Prediksi_pengeluaran">
 
     <ImageButton
         android:id="@+id/back"
@@ -176,7 +178,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="342dp"
         android:layout_height="85dp"
         android:layout_marginTop="313dp"
@@ -257,6 +259,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
